# qristal

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  simple_install.sh
docker/: Dockerfile
exercises/QB_Qristal_Challenge/: QB_Qristal_Challenge.ipynb  SPOILER_QB_Qristal_Challenge_Worked_Solution.ipynb
